tests/macros/confirm/plugin.rs
fn main() {
    let q = requestty::questions![Confirm { plugin: todo!() }];
}
